--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,94 @@
 }
 
 
+/* shared styles */
+.display-flex {
+    display: flex;
+}
+
+.text-gray{
+    color: #424242;
+}
+
+.text-light-gray{
+    color: #727272;
+}
+
+.bg-light{
+    background-color: rgb(225, 144, 14, 0.1);
+}
+
+.btn-p{
+    background-color: #FF900E;
+    color: white;
+    border: none;
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    font-weight: 600;
+    border-radius: 8px;
+    margin-bottom: 50px;
+    margin-top: 20px;
+}
+
+/* Header styles */
+
+
+
+/* nav styles */
+.navbar{
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
+.nav-item{
+    list-style-type: none;
+    margin-right: 30px;
+}
+
+
+.nav-links{
+    text-decoration: none;
+    font-weight: 500;
+}
+
+
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.brand{
+    font-weight: 700;
+    font-size: 3rem;
+}
+
+.brand a{
+    text-decoration: none;
+}
+
+/* banner styles */
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.banner-title{
+    font-weight: 700;
+    font-size: 4rem;
+}
+
+.bnr-img{
+    width: 100%;
+}
+
+
+/* responsive workload */
+@media screen  and (max-width: 576px){
+    .navbar, .nav-links{
+        flex-direction: column;
+    }
+    
+}
