--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,13 @@
     color: #424242;
 }
 
+
+
+.text-primary{
+    color: #FF900E;
+}
+
+
 .text-light-gray{
     color: #727272;
 }
@@ -36,6 +43,27 @@
     margin-bottom: 50px;
     margin-top: 20px;
 }
+
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main > section{
+    margin-top: 130px;
+}
+
+
+
+
+
 
 /* Header styles */
 
@@ -89,13 +117,61 @@
 
 .bnr-img{
     width: 100%;
+    padding-bottom: 20px;
 }
+
+
+
+
+
+/* team and features  */
+.teams{
+    align-items: center;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.feature-title{
+    font-size: 2.5rem;
+    font-weight: 700;
+}
+
+#quick-list{
+    font-weight: 500;
+}
+
 
 
 /* responsive workload */
 @media screen  and (max-width: 576px){
-    .navbar, .nav-links{
+    .navbar, .nav-links, .teams{
         flex-direction: column;
     }
-    
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .our-features{
+        text-align: center;
+        margin: 30px auto;
+    }
+
+
 }
+
+/* medium device */
+
+@media screen and (min-width: 576px) and (max-width:992px){
+    .teams{
+        flex-direction: column;
+        text-align: center;
+    }
+    .our-features{
+        text-align: center;
+        margin: 30px auto;
+    }
+}
+
